--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn {
+  @apply p-3 hover:bg-gray-200 rounded-full transition-all;
+}
+
+.search-input {
+  @apply bg-gray-100 w-full rounded-md px-14 py-2 outline-none focus:bg-white focus:shadow-md transition-all;
+}
+/* .btn-account {
+  @apply bg-orange-500 w-8 h-8 text-xl text-white rounded-full hover:ring hover:right-offset-2 ring-gray-200;
+} */
