--- a/src/style.css
+++ b/src/style.css
@@ -3,12 +3,9 @@
 @tailwind utilities;
 
 .btn {
-  @apply p-3 hover:bg-gray-200 rounded-full transition-all;
+  @apply p-3 bg-base-100 rounded-full transition-all;
 }
 
 .search-input {
-  @apply bg-gray-100 w-full rounded-md px-14 py-2 outline-none focus:bg-white focus:shadow-md transition-all;
+  @apply w-full bg-base-200 rounded-md px-14 py-2 outline-none  focus:shadow-md focus:bg-base-100 transition-all;
 }
-/* .btn-account {
-  @apply bg-orange-500 w-8 h-8 text-xl text-white rounded-full hover:ring hover:right-offset-2 ring-gray-200;
-} */
